SEO: add Open Graph locale tags (en_US + es_ES) across site; fix duplicated DOCTYPE/html in Web Design page head

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <meta property="og:title" content="Websites Hialeah | UX90 Creations - SEO Miami">
     <meta property="og:description" content="Professional websites Hialeah, SEO services, aplicaciones development Miami. Expert posicionamiento Google & design solutions.">
     <meta property="og:image" content="https://ux90.dev/images/logo.png">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="es_ES">
 
     <!-- Twitter meta tags -->
     <meta property="twitter:card" content="summary_large_image">
