--- a/services/desktop-apps-miami.html
+++ b/services/desktop-apps-miami.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="Desktop Apps Miami | Windows & Cross‑Platform Development | UX90 Creations">
   <meta property="og:description" content="Custom desktop apps for Windows, macOS, Linux. Electron, .NET, Java. Packaging and integrations. Free quote.">
   <meta property="og:image" content="https://ux90.dev/images/logo.png">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://ux90.dev/services/desktop-apps-miami.html">
