--- a/services/ecommerce-miami.html
+++ b/services/ecommerce-miami.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="E‑commerce Miami | Shopify & WooCommerce Websites | UX90 Creations">
   <meta property="og:description" content="Shopify/WooCommerce development for Miami/Hialeah businesses. Fast, secure, and optimized for conversions.">
   <meta property="og:image" content="https://ux90.dev/images/logo.png">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://ux90.dev/services/ecommerce-miami.html">
