--- a/services/mobile-apps-miami.html
+++ b/services/mobile-apps-miami.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="Mobile App Development Miami | iOS & Android | UX90 Creations">
   <meta property="og:description" content="iOS/Android and cross‑platform app development for Miami/Hialeah businesses. Design, integration, and ASO.">
   <meta property="og:image" content="https://ux90.dev/images/logo.png">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://ux90.dev/services/mobile-apps-miami.html">
