--- a/services/seo-miami.html
+++ b/services/seo-miami.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="SEO Miami | Local SEO & Google Rankings | UX90 Creations">
   <meta property="og:description" content="Local SEO services for Miami/Hialeah businesses. Technical SEO, content, and Google Business Profile optimization.">
   <meta property="og:image" content="https://ux90.dev/images/logo.png">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://ux90.dev/services/seo-miami.html">
