--- a/services/ux-ui-design-miami.html
+++ b/services/ux-ui-design-miami.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="UX/UI Design Miami | Research, Prototyping & Design Systems | UX90 Creations">
   <meta property="og:description" content="Research‑driven UX, clean UI, and design systems. Wireframes, prototypes, and accessibility for higher conversions.">
   <meta property="og:image" content="https://ux90.dev/images/logo.png">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://ux90.dev/services/ux-ui-design-miami.html">
