--- a/services/web-design-miami.html
+++ b/services/web-design-miami.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +12,8 @@
   <meta property="og:title" content="Web Design Miami | Custom Websites & SEO‑Ready | UX90 Creations">
   <meta property="og:description" content="Custom web design in Miami/Hialeah. Responsive, fast, and SEO‑optimized websites that convert.">
   <meta property="og:image" content="https://ux90.dev/images/logo.png">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://ux90.dev/services/web-design-miami.html">
